# blue-linter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
blue_linter/: __init__.py  app.py  candidate.py  cli.py  document.py  engine.py  findings.py  package.py  parser.py  reports.py  rules.py  validation.py
docs/: backlog.md  codex-standard-procedures.md  mvp-blueprint.md  mvp-roadmap.md  skill-installation.md  template-adoption.md
docs/agent-roles/: backlog-manager.md  coordinator.md  implementation-agent.md  pr-reviewer.md
docs/workflows/: feature-work.md  merge-and-rebase.md  parallel-agents.md  pull-request.md
rules/: active-style-rules.yaml
samples/: README.md  create_synthetic_docx.py  run_synthetic_candidate.py  run_synthetic_review.py  run_synthetic_validation.py  synthetic-style-review.docx
templates/: agent-task-brief.md  backlog-entry.md  feature-plan.md  pr-validation-note.md
tests/: test_app_e2e.py  test_candidate.py  test_cli.py  test_docs.py  test_engine.py  test_findings.py  test_package.py  test_parser.py  test_reports.py  test_rules.py  test_validation.py
