[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blue-linter"
version = "0.1.0"
description = "Local-first Word document style compliance tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1,<4.0",
    "pydantic>=2.8,<3.0",
    "python-docx>=1.1,<2.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1.0",
]

[project.scripts]
blue-linter = "blue_linter.cli:main"

[tool.setuptools.packages.find]
include = ["blue_linter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

